Fix: # 1603 - Root ID image spacing

--- a/themes/_common/css-2.0.0/style.css
+++ b/themes/_common/css-2.0.0/style.css
@@ -26,8 +26,12 @@
 	height: auto;
 }
 
-#select2-rootid-container img {
-	padding: 5px;
+.select2-container .select2-selection--single .select2-selection__rendered {
+	padding-left: 0;
+}
+
+#select2-rootid-container img, #select2-xref-container img {
+    padding: 3px;
 }
 
 /*
